--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import './syntaxHighlighting';
+@import './Mermaid';
 
 @import '~@fontsource/source-serif-pro/400.css';
 @import '~@fontsource/source-serif-pro/400-italic.css';
