--- a/src/styles/syntaxHighlighting.scss
+++ b/src/styles/syntaxHighlighting.scss
@@ -11,7 +11,7 @@ pre[class*='language-'] {
   text-align: left;
   word-spacing: normal;
   word-break: normal;
-  font-size: 0.9em;
+  font-size: 0.85rem;
   line-height: 1.2em;
 
   @apply rounded-md;
