🎨 Added styling for footnote links

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -443,4 +443,9 @@ blockquote {
       @apply mt-0;
     }
   }
+
+  a.data-footnote-backref {
+    @apply no-underline;
+    @apply relative top-[3px];
+  }
 }
